--- a/src/app/components/pizza-form/pizza-form.component.html
+++ b/src/app/components/pizza-form/pizza-form.component.html
@@ -1,56 +1,58 @@
-
-    <div class="pizza-form">
-      <form >
+<div class="pizza-form">
+    <form>
         <label>
-          <h4>Pizza name</h4>
-          <input
-            type="text"
-            placeholder="e.g. Pepperoni"
-            class="pizza-form__input"
-            [class.error]="true">
-          <div
-            class="pizza-form__error">
-            <p>Pizza must have a name</p>
-          </div>
+            <h4>Pizza name</h4>
+            <input
+                type="text"
+                placeholder="e.g. Pepperoni"
+                class="pizza-form__input"
+                [class.error]="true"
+                [(ngModel)]="pizza && pizza.name"
+                name="pizza"
+            />
+            <div *ngIf="!pizza?.name" class="pizza-form__error">
+                <p>Pizza must have a name</p>
+            </div>
         </label>
 
-        <pizza-display></pizza-display>
+        <pizza-display [pizza]="pizza"></pizza-display>
 
         <label>
-          <h4>Select toppings</h4>
+            <h4>Select toppings</h4>
         </label>
         <div class="pizza-form__list">
-          <pizza-toppings>
-          </pizza-toppings>
+            <pizza-toppings [toppings]="toppings"></pizza-toppings>
         </div>
 
         <div class="pizza-form__actions">
-          <button
-            id="create_button"
-            type="button"
-            class="btn btn__ok"
-            >
-            <!-- visible que dans le cas d'une nouvelle pizzas -->
-            Create Pizza
-          </button>
-
             <button
-              id="update_button"
-              type="button"
-              class="btn btn__ok"
-              >
-            <!-- visible que dans le cas d'une pizzas existante -->
-              Save changes
+                *ngIf="hasRoute('/new')"
+                id="create_button"
+                type="button"
+                class="btn btn__ok"
+            >
+                <!-- visible que dans le cas d'une nouvelle pizzas -->
+                Create Pizza
+            </button>
+            <button
+                *ngIf="!hasRoute('/new')"
+                id="update_button"
+                type="button"
+                class="btn btn__ok"
+                (click)="updatePizza(pizza.id, pizza.name)"
+            >
+                <!-- visible que dans le cas d'une pizzas existante -->
+                Save changes
             </button>
 
             <button
-              type="button"
-              class="btn btn__warning"
-              >
-            <!-- visible que dans le cas d'une pizzas existante -->
-              Delete Pizza
+                *ngIf="!hasRoute('/new')"
+                type="button"
+                class="btn btn__warning"
+            >
+                <!-- visible que dans le cas d'une pizzas existante -->
+                Delete Pizza
             </button>
         </div>
-      </form>
-    </div>
-  
+    </form>
+</div>
