--- a/src/app/components/pizza-item/pizza-item.component.html
+++ b/src/app/components/pizza-item/pizza-item.component.html
@@ -1,10 +1,7 @@
-<div class="pizza-item" >
-  <a href="/products/1">
-    <pizza-display>
-    </pizza-display>
-    <h4>Le nom de ma pizza</h4>
-    <button type="button" class="btn btn__ok">
-      View Pizza
-    </button>
-  </a>
+<div class="pizza-item">
+    <a [routerLink]="['/products', pizza.id]">
+        <pizza-display [pizza]="pizza"> </pizza-display>
+        <h4>{{ pizza.name }}</h4>
+        <button type="button" class="btn btn__ok">View Pizza</button>
+    </a>
 </div>
