--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -1,16 +1,16 @@
 <div class="app">
     <div class="app__header">
-      <img src="/assets/img/logo.svg" class="app__logo">
+        <img src="/assets/img/logo.svg" routerLink="" class="app__logo" />
     </div>
     <div class="app__content">
-      <div class="app__nav">
-        <a href="/">Products</a>
-      </div>
-      <div class="app__container">
-        <router-outlet></router-outlet>
-      </div>
-      <div class="app__footer">
-        <p>&copy; Ultimate Pizza Inc.</p>
-      </div>
+        <div class="app__nav">
+            <a routerLink="products">Products</a>
+        </div>
+        <div class="app__container">
+            <router-outlet></router-outlet>
+        </div>
+        <div class="app__footer">
+            <p>&copy; Ultimate Pizza Inc.</p>
+        </div>
     </div>
-  </div>
+</div>
