--- a/src/app/components/pizza-form/pizza-form.component.html
+++ b/src/app/components/pizza-form/pizza-form.component.html
@@ -21,7 +21,11 @@
             <h4>Select toppings</h4>
         </label>
         <div class="pizza-form__list">
-            <pizza-toppings [toppings]="toppings"></pizza-toppings>
+            <pizza-toppings
+                [toppings]="toppings"
+                [value]="pizza?.toppings"
+                (toppingsChange)="updSelecToppings($event)"
+            ></pizza-toppings>
         </div>
 
         <div class="pizza-form__actions">
@@ -30,6 +34,7 @@
                 id="create_button"
                 type="button"
                 class="btn btn__ok"
+                (click)="createPizza()"
             >
                 <!-- visible que dans le cas d'une nouvelle pizzas -->
                 Create Pizza
@@ -49,6 +54,7 @@
                 *ngIf="!hasRoute('/new')"
                 type="button"
                 class="btn btn__warning"
+                (click)="removePizza()"
             >
                 <!-- visible que dans le cas d'une pizzas existante -->
                 Delete Pizza
