--- a/src/app/containers/product-item/product-item.component.html
+++ b/src/app/containers/product-item/product-item.component.html
@@ -1,10 +1,12 @@
 <div class="product-item">
-    <pizza-form
-        [pizza]="pizza"
-        [toppings]="toppings"
-        (update)="updatePizza($event)"
-        (create)="createPizza($event)"
-        (remove)="removePizza($event)"
-    >
-    </pizza-form>
+    <ng-container *ngIf="onNewPage || (pizza && toppings)">
+        <pizza-form
+            [pizza]="pizza"
+            [toppings]="toppings"
+            (update)="updatePizza($event)"
+            (create)="createPizza($event)"
+            (remove)="removePizza($event)"
+        >
+        </pizza-form>
+    </ng-container>
 </div>
