--- a/src/app/components/pizza-form/pizza-form.component.html
+++ b/src/app/components/pizza-form/pizza-form.component.html
@@ -4,21 +4,18 @@
             <h4>Pizza name</h4>
             <input
                 type="text"
+                [formControl]="nameForm"
+                required
                 placeholder="e.g. Pepperoni"
                 class="pizza-form__input"
                 [class.error]="true"
-                [(ngModel)]="pizza && pizza.name"
-                name="pizza"
             />
-            <div *ngIf="!pizza?.name" class="pizza-form__error">
+            <div class="pizza-form__error" *ngIf="!pizzaNameIsValid()">
                 <p>Pizza must have a name</p>
             </div>
         </label>
 
-        <pizza-display
-            *ngIf="pizza"
-            [pizza]="pizza"
-        ></pizza-display>
+        <pizza-display *ngIf="pizza" [pizza]="pizza"></pizza-display>
 
         <label>
             <h4>Select toppings</h4>
@@ -48,7 +45,7 @@
                 id="update_button"
                 type="button"
                 class="btn btn__ok"
-                (click)="updatePizza(pizza.id, pizza.name)"
+                (click)="updatePizza()"
             >
                 <!-- visible que dans le cas d'une pizzas existante -->
                 Save changes
